--- a/src/templates/internacao/pedidoInternacao.html
+++ b/src/templates/internacao/pedidoInternacao.html
@@ -20,35 +20,35 @@
                 <label for="numProntuario">Prontuário
                     <b class="text-danger">*</b>
                 </label>
-                <input class="form-control form-control-sm" type="number" placeholder="Informe o prontuário" ng-change="GetPaciente()" ng-model="pedidoInternacao.numProntuario">
+                <input class="form-control form-control-sm" type="number" placeholder="Informe o prontuário" ng-change="GetPaciente()" ng-model="pedidoInternacao.paciente.numProntuario">
             </div>
 
             <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-8 kan-group ">
                 <label for="nomePaciente">Nome do Paciente
                     <b class="text-danger">*</b>
                 </label>
-                <input disabled class="form-control form-control-sm" type="text" ng-model="pedidoInternacao.nomePaciente">
+                <input disabled class="form-control form-control-sm" type="text" ng-model="pedidoInternacao.paciente.nomePaciente">
             </div>
 
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group ">
                 <label for="nomeMae">Nome da Mãe
                     <b class="text-danger">*</b>
                 </label>
-                <input disabled class="form-control form-control-sm" type="text" ng-model="pedidoInternacao.nomeMae">
+                <input disabled class="form-control form-control-sm" type="text" ng-model="pedidoInternacao.paciente.nomeMae">
             </div>
 
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
                 <label>Data de nascimento
                     <b class="text-danger">*</b>
                 </label>
-                <input disabled class="form-control form-control-sm" type="date" ng-model="pedidoInternacao.dataNascimento" ng-change=" calcularIdade()"
+                <input disabled class="form-control form-control-sm" type="date" ng-model="pedidoInternacao.paciente.dataNascimento" ng-change=" calcularIdade()"
                     value="">
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6  kan-group">
                 <label for="idade">Idade
                     <b class="text-danger">*</b>
                 </label>
-                <input disabled type="text" ng-model="pedidoInternacao.idade" class="form-control form-control-sm">
+                <input disabled type="text" ng-model="pedidoInternacao.paciente.idade" class="form-control form-control-sm">
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12  kan-group">
                 <label>Sexo</label>
@@ -56,14 +56,14 @@
                 <span class="clearfix"></span>
                 <label class="custom-control custom-radio">
                     <input disabled id="feminino" name="genero" type="radio" class="custom-control-input ml-4 ng-pristine ng-untouched ng-valid ng-empty"
-                        ng-model="pedidoInternacao.genero" ng-value="'Masculino'" value="Masculino">
+                        ng-model="pedidoInternacao.paciente.genero" ng-value="'Masculino'" value="Masculino">
                     <span class="custom-control-indicator p-3"></span>
                     <span for="feminino" class="custom-control-description ml-4 mt-2">Masculino</span>
                 </label>
 
                 <label class="custom-control custom-radio">
                     <input disabled id="masculino" name="genero" type="radio" class="custom-control-input ml-4 ng-pristine ng-untouched ng-valid ng-empty"
-                        ng-model="pedidoInternacao.genero" ng-value="'Feminino'" value="Feminino">
+                        ng-model="pedidoInternacao.paciente.genero" ng-value="'Feminino'" value="Feminino">
                     <span class="custom-control-indicator p-3"></span>
                     <span for="masculino" class="custom-control-description ml-4 mt-2">Feminino</span>
                 </label>
