--- a/src/templates/internacao/pedidoInternacao.html
+++ b/src/templates/internacao/pedidoInternacao.html
@@ -93,7 +93,7 @@
                 <label for="aih">AIH
                     <b class="text-danger">*</b>
                 </label>
-                <input class="form-control form-control-sm" type="number" placeholder="Informe a AIH" ng-model="pedidoInternacao.AIH">
+                <input class="form-control form-control-sm" type="number" placeholder="Informe a AIH" ng-model="pedidoInternacao.aih">
             </div>
             <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-8 kan-group">
                 <label>Ala
