--- a/src/templates/internacao/pedidoInternacao.html
+++ b/src/templates/internacao/pedidoInternacao.html
@@ -10,7 +10,7 @@
 
     <div class="kan-row">
         <!-- PACIENTE -->
-        <fieldset class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 kan-group">
+        <fieldset class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 kan-group p-2">
             <h5 class="kan-title">Paciente
                 <i class="fa fa-plus fa-1-x kan-icon-success" ng-click="openModalCadastro()" data-toggle="tooltip" data-placement="bottom" title="Cadastrar novo paciente."></i>
                 <i class="fa fa-search fa-1-x kan-icon-success" ng-click="openModalPesquisa()" data-toggle="tooltip" data-placement="bottom" title="Selecionar um paciente.">
@@ -23,7 +23,7 @@
                 <input class="form-control form-control-sm" type="number" placeholder="Informe o prontuário" ng-change="GetPaciente()" ng-model="pedidoInternacao.paciente.numProntuario">
             </div>
 
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group ">
+            <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-8 kan-group">
                 <label for="nomePaciente">Nome do Paciente
                     <b class="text-danger">*</b>
                 </label>
