ajustado relatorio de pacientes internados e pedidos em aberto.

--- a/src/templates/internacao/registroInternacao.html
+++ b/src/templates/internacao/registroInternacao.html
@@ -10,7 +10,7 @@
 
     <div class="kan-row">
         <!-- PEDIDO INTERNACAO -->
-        <fieldset class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 kan-group">
+        <fieldset class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 kan-group pr-2">
             <h5 class="kan-title">Pedido de Internação
                 <i class="fa fa-info fa-1-x kan-icon-info" data-toggle="tooltip" data-placement="bottom" title="Para carregar os dados do pedido de internação basta informar o prontuário 
                     do paciente que deseja internar ou selecionar um pedido de internação da lista que aparecerá quando clicar no ícone da lupa.">
@@ -98,7 +98,6 @@
                     <span for="masculino" class="custom-control-description ml-4 mt-2">Feminino</span>
                 </label>
             </div>
-
         </fieldset>
 
         <!-- REGISTRO DE INTERNAÇÃO -->
@@ -141,18 +140,6 @@
                     <b class="text-danger">*</b>
                 </label>
                 <input class="form-control form-control-sm" type="date" ng-model="registroInternacao.previsaoAlta">
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-                <label>Médico Responsável
-                    <b class="text-danger">*</b>
-                </label>
-                <input type="text" class="form-control form-control-sm" placeholder="Informe o nome do(a) médico(a) responsável" ng-model="registroInternacao.medicoResponsavel">
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-                <label>Residente Responsável
-                    <b class="text-danger">*</b>
-                </label>
-                <input type="text" class="form-control form-control-sm" placeholder="Informe o nome do(a) residente Responsável" ng-model="registroInternacao.residenteResponsavel">
             </div>
         </fieldset>
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 button-kan-row">
