--- a/src/templates/relatorios/modal-kanban.html
+++ b/src/templates/relatorios/modal-kanban.html
@@ -41,18 +41,19 @@
                     <tbody>
                         <tr ng-repeat="paciente in pacientes" ng-class="{'table-success' : paciente.classificacao === 'verde', 'table-danger' : paciente.classificacao === 'vermelho', 'table-warning' : paciente.classificacao === 'amarelo'}">
                             <td class="text-center" title="{{paciente.pedidoInternacao.ala.nomeAla}}">{{paciente.pedidoInternacao.ala.nomeAla}}</td>
+                            <td class="text-center" title="{{paciente.enfermaria.nomeEnfermaria}}">{{paciente.enfermaria.nomeEnfermaria}}</td>
                             <td class="text-center" title="{{paciente.pedidoInternacao.medicoResponsavel}}">{{paciente.pedidoInternacao.medicoResponsavel}}</td>
                             <td class="text-center" title="{{paciente.pedidoInternacao.residenteResponsavel}}">{{paciente.pedidoInternacao.residenteResponsavel}}</td>
-                            <td class="text-center">{{paciente.previsaoAlta | date}}</td>
+                            <td class="text-center">{{paciente.previsaoAlta | date : "dd/MM/yy"}}</td>
                             <td class="text-center">{{paciente.leito.nomeLeito}}</td>
-                            <td title="{{paciente.pedidoInternacao.paciente.numProntuario}}">{{paciente.pedidoInternacao.paciente.numProntuario}}</td>
-                            <td title="{{paciente.pedidoInternacao.paciente.nomePaciente}}">{{paciente.pedidoInternacao.paciente.nomePaciente}}</td>
-                            <td class="text-center" title="{{paciente.pedidoInternacao.paciente.dataNascimento | date : dd/MM/yy}}">{{paciente.pedidoInternacao.paciente.dataNascimento | date : dd/MM/yy}}</td>
+                            <td class="text-center" title="{{paciente.pedidoInternacao.paciente.numProntuario}}">{{paciente.pedidoInternacao.paciente.numProntuario}}</td>
+                            <td class="text-center" title="{{paciente.pedidoInternacao.paciente.nomePaciente}}">{{paciente.pedidoInternacao.paciente.nomePaciente}}</td>
+                            <td class="text-center" title="{{paciente.pedidoInternacao.paciente.dataNascimento | date : 'dd/MM/yy'}}">{{paciente.pedidoInternacao.paciente.dataNascimento | date : "dd/MM/yy"}}</td>
                             <td class="text-center" title="{{paciente.pedidoInternacao.paciente.idade}}">{{paciente.pedidoInternacao.paciente.idade}}</td>
-                            <td class="text-center" title="{{paciente.pedidoInternacao.paciente.sexo}}">{{paciente.pedidoInternacao.paciente.sexo}}</td>
-                            <td class="text-center">{{paciente.pedidoInternacao.dataAdmissao | | date : dd/MM/yy HH:mm}}</td>
+                            <td class="text-center" title="{{paciente.pedidoInternacao.paciente.sexo}}">{{paciente.pedidoInternacao.paciente.genero}}</td>
+                            <td class="text-center">{{paciente.pedidoInternacao.dataAdmissao | date : "dd/MM/yy HH:mm"}}</td>
                             <td class="text-center">{{paciente.diasInternado}}</td>
-                            <td title="{{paciente.pedidoInternacao.diagnostico.descricaoDiagnostico}}">{{paciente.pedidoInternacao.diagnostico.descricaoDiagnostico}}</td>
+                            <td class="text-center" title="{{paciente.pedidoInternacao.diagnostico.descricaoDiagnostico}}">{{paciente.pedidoInternacao.diagnostico.descricaoDiagnostico}}</td>
                             <td class="text-center">
                                 <button class="btn kan-btn-circle kan-btn-success kan-btn-sm" data-toggle="tooltip" title="{{setAllPendencies(paciente.pendencias)}}">
                                     <i class="fa fa-file"></i>
