--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -30,38 +30,49 @@
 <nav class="sidebar navbar-expand-lg navbar-white bg-white" id="mainNav">
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav navbar-sidenav" id="sideNavResponsive">
-
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Pedido de Internação">
-                <a class="nav-link" ui-sref="pedidoInternacao">
-                    <img src="img/pedido.png" alt="">
-                    <span class="nav-link-text">
-                        Pedir Internação</span>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="collapse" data-target="#internacao-subitens" aria-expanded="false" aria-controls="internacao-subitens"
+                    data-toggle="tooltip" data-placement="right" title="Internação">
+                    <img class="menu-icon" src="img/pedido.png" alt="Internação">
+                    <span class="menu-title ml-2">Internação</span>
+                    <i class="fa fa-caret-down ml-auto mr-2" aria-hidden="true"></i>
                 </a>
-            </li>
-
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Registro de Internação">
-                <a class="nav-link" ui-sref="registroInternacao">
-                        <img src="img/registro.png" alt="">
-                    <span class="nav-link-text">
-                        Registrar Internação</span>
-                </a>
+                <div class="collapse" id="internacao-subitens">
+                    <ul class="nav flex-column pl-5">
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Pedir Internação">
+                            <a class="nav-link" ui-sref="pedidoInternacao">
+                                <span class="nav-link-text">
+                                    Pedir Internação
+                                </span>
+                            </a>
+                        </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Registrar Internação">
+                            <a class="nav-link" ui-sref="registroInternacao">
+                                <span class="nav-link-text">
+                                    Registrar Internação
+                                </span>
+                            </a>
+                        </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Pedidos de Internação em Aberto">
+                            <a class="nav-link" ui-sref="relatorioPedidosEmAberto">
+                                <span class="nav-link-text">
+                                    Pedidos em Aberto
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </li>
 
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reltório de Leitos">
                 <a class="nav-link" ui-sref="leitos">
-                        <img src="img/leito.png" alt="">
+                    <img src="img/leito.png" alt="">
                     <span class="nav-link-text">
                         Status dos Leitos</span>
                 </a>
             </li>
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Relatório Pedidos de Internação em Aberto">
-                <a class="nav-link" ui-sref="relatorioPedidosEmAberto">
-                        <img src="img/listaAdd.png" alt="">
-                    <span class="nav-link-text">
-                        Pedidos em Aberto</span>
-                </a>
-            </li>
+
         </ul>
     </div>
 </nav>
