--- a/src/templates/relatorios/listaPedidoInternacao.html
+++ b/src/templates/relatorios/listaPedidoInternacao.html
@@ -11,9 +11,11 @@
                             <th class="text-center">Nº Prontuário</th>
                             <th class="text-center">Nome do Paciente</th>
                             <th class="text-center">Nome da mãe</th>
+                            <th class="text-center">Data Nascimento</th>
                             <th class="text-center">Idade</th>
+                            <th class="text-center">Sexo</th>
                             <th class="text-center">Data Admissão</th>
-                            <th class="text-center">Horas aguardando</th>
+                            <th class="text-center">Tempo aguardando</th>
                             <th class="text-center">Ação</th>
                         </tr>
                     </thead>
@@ -22,7 +24,9 @@
                             <td class="text-center">{{pedido.paciente.numProntuario}}</td>
                             <td class="text-center">{{pedido.paciente.nomePaciente}}</td>
                             <td class="text-center">{{pedido.paciente.nomeMae}}</td>
+                            <td class="text-center">{{pedido.paciente.dataNascimento | date : 'dd/MM/yy'}}</td>
                             <td class="text-center">{{pedido.paciente.idade}}</td>
+                            <td class="text-center">{{pedido.paciente.genero}}</td>
                             <td class="text-center">{{pedido.dataAdmissao | date: "dd/MM/yy HH:mm"}}</td>
                             <td class="text-center" title="{{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}">
                                 {{pedido.tempo.dias + ' dia(s) ' + pedido.tempo.horas + 'h ' + pedido.tempo.minutos + 'min'}}</td>
