--- a/src/templates/internacao/pedidoInternacao.html
+++ b/src/templates/internacao/pedidoInternacao.html
@@ -12,8 +12,10 @@
         <!-- PACIENTE -->
         <fieldset class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 kan-group p-2">
             <h5 class="kan-title">Paciente
-                <i class="fa fa-plus fa-1-x kan-icon-success" ng-click="openModalCadastro()" data-toggle="tooltip" data-placement="bottom" title="Cadastrar novo paciente."></i>
-                <i class="fa fa-search fa-1-x kan-icon-success" ng-click="openModalPesquisa()" data-toggle="tooltip" data-placement="bottom" title="Selecionar um paciente.">
+                <i class="fa fa-plus fa-1-x kan-icon-success" ng-click="openModalCadastro()" data-toggle="tooltip" data-placement="bottom"
+                    title="Cadastrar novo paciente."></i>
+                <i class="fa fa-search fa-1-x kan-icon-success" ng-click="openModalPesquisa()" data-toggle="tooltip" data-placement="bottom"
+                    title="Selecionar um paciente.">
                 </i>
             </h5>
             <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-4 kan-group">
@@ -77,21 +79,22 @@
             <h5 class="  kan-title">Pedido Internação
                 <i class="fa fa-info fa-1-x kan-icon-info" data-toggle="tooltip" data-placement="bottom" title="Dados do pedido de internação do paciente."></i>
             </h5>
-            <div ng-hide="true" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-                <label>Data do pedido </label>
-                <input class="form-control form-control-sm" type="date" ng-model="pedidoInternacao.dataPedido" ng-disabled="true">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
+                <label class="custom-control custom-checkbox">
+                    <input type="checkbox" ng-model="pedidoInternacao.precisaIsolamento" class="custom-control-input">
+                    <span class="custom-control-indicator"></span>
+                    <span class="custom-control-description">Precisa de isolamento</span>
+                </label>
             </div>
-
-            <div ng-hide="true" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-                <label for="Status">Status</label>
-                <select class="form-control form-control-sm" ng-model="pedidoInternacao.status" ng-disabled="true">
-                    <option value="">Selecione </option>
-                    <option value="Pendente">Pendente</option>
-                    <option value="Em Andamento">Em Andamento</option>
-                    <option value="Concluído">Concluído</option>
-                    <option value="Cancelado">Cancelado</option>
-                </select>
-            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group" ng-hide="!pedidoInternacao.precisaIsolamento">
+                    <label>Isolamento
+                        <b class="text-danger">*</b>
+                    </label>
+                    <select ng-model="pedidoInternacao.idIsolamento" class="form-control form-control-sm">
+                        <option value="">Selecione o Isolamento</option>
+                        <option ng-repeat="isolamento in Isolamentos" value="{{isolamento.idIsolamento}}">{{isolamento.nome}}</option>
+                    </select>
+                </div>
             <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-4 kan-group">
                 <label for="aih">AIH
                     <b class="text-danger">*</b>
