--- a/src/resources/libs/css/kan.css
+++ b/src/resources/libs/css/kan.css
@@ -290,6 +290,15 @@ fieldset.kan-group {
     padding: 0px;
 }
 
+* Sweet Popup */
+.swal2-popup.swal2-modal.swal2-show {
+  width: 24em;
+  font-size: 20px;
+}
+.swal2-container {
+    z-index: 10000;
+}
+
 /** NOVA NAVEGACAO - MENU **/
 
 /* TAMANHO LOGO KANLEITOS*/
