todos os registros de internação

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -34,32 +34,35 @@
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Pedido de Internação">
                 <a class="nav-link" ui-sref="pedidoInternacao">
                     <img src="img/pedido.png" alt="">
-                    <span class="nav-link-text">
-                        Pedir Internação</span>
+                    <span class="nav-link-text">Pedir Internação</span>
                 </a>
             </li>
 
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Registro de Internação">
                 <a class="nav-link" ui-sref="registroInternacao">
-                        <img src="img/registro.png" alt="">
-                    <span class="nav-link-text">
-                        Registrar Internação</span>
+                    <img src="img/registro.png" alt="">
+                    <span class="nav-link-text">Registrar Internação</span>
                 </a>
             </li>
 
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reltório de Leitos">
                 <a class="nav-link" ui-sref="leitos">
-                        <img src="img/leito.png" alt="">
-                    <span class="nav-link-text">
-                        Status dos Leitos</span>
+                    <img src="img/leito.png" alt="">
+                    <span class="nav-link-text">Status dos Leitos</span>
                 </a>
             </li>
 
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Relatório Pedidos de Internação em Aberto">
                 <a class="nav-link" ui-sref="relatorioPedidosEmAberto">
-                        <img src="img/listaAdd.png" alt="">
-                    <span class="nav-link-text">
-                        Pedidos em Aberto</span>
+                    <img src="img/listaAdd.png" alt="">
+                    <span class="nav-link-text">Pedidos em Aberto</span>
+                </a>
+            </li>
+
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Relatório Registro de Todas Internações">
+                <a class="nav-link" ui-sref="relatorioTodasInternacoes">
+                    <img src="img/listaAdd.png" alt="">
+                    <span class="nav-link-text">Todas as Internações</span>
                 </a>
             </li>
         </ul>
