--- a/src/templates/relatorios/kanban-leitos.html
+++ b/src/templates/relatorios/kanban-leitos.html
@@ -4,7 +4,7 @@
             <span>Página Inicial</span>
         </li>
         <li class="breadcrumb-item active">
-            <span>Relatório internações</span>
+            <span>Relatório de Internações</span>
         </li>
         <li class="text-right">
             <button class="btn kan-btn-success kan-btn-sm" ng-click="atualizaPacientesInternados()">
