--- a/src/templates/relatorios/modal-kanban.html
+++ b/src/templates/relatorios/modal-kanban.html
@@ -23,14 +23,14 @@
                         <tr>
                             <th class="text-center">Nome do Paciente</th>
                             <th class="text-center">Idade</th>
-                            <th class="text-center">Diagnostico</th>
-                            <th class="text-center">Data da Internação</th>
+                            <th class="text-center">Diagnóstico</th>
+                            <th class="text-center">Data Internação</th>
                             <th class="text-center">Dias Internados</th>
-                            <th class="text-center">Previsao de Alta</th>
+                            <th class="text-center">Previsão Alta</th>
                             <th class="text-center">Ala</th>
                             <th class="text-center">Enfermaria</th>
                             <th class="text-center">Leito</th>
-                            <th class="text-center">Pendencia Atual</th>
+                            <th class="text-center">Pendência Atual</th>
                         </tr>
                     </thead>
                     <tbody>
