--- a/src/templates/cadastros-gerais/hospitais.html
+++ b/src/templates/cadastros-gerais/hospitais.html
@@ -45,7 +45,9 @@
                                 <span ng-show="!hospital.inativo">Não</span>
                             </td>
                             <td class="text-center">
-                                <i class="fa fa-pencil text-primary m-1" aria-hidden="true" title="Atualizar dados do hospital" ng-click="updateHospital(hospital)"></i>
+                                <i class="fa fa-pencil text-primary" aria-hidden="true" title="Editar dados do hospital" ng-click="updateHospital(hospital)"></i>
+                                <i ng-show="!hospital.inativo" class="fa fa-ban text-danger" aria-hidden="true" title="Inativar hospital" ng-click="inativarHospital(hospital)"></i>
+                                <i ng-show="hospital.inativo" class="fa fa-check text-success" aria-hidden="true" title="Ativar hospital" ng-click="ativarHospital(hospital)"></i>
                             </td>
                         </tr>
                     </tbody>
