Adicionado legenda para ações de editar, inativar e ativar hospital / Alterado nome do botão da interface cadastro de hospital

--- a/src/templates/cadastros-gerais/cadastroHospital.html
+++ b/src/templates/cadastros-gerais/cadastroHospital.html
@@ -117,7 +117,7 @@
         </fieldset>
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 button-kan-row">
             <button type="button" class="btn kan-btn-danger" ng-click="closeThisDialog(false)">Cancelar</button>
-            <button type="button" class="btn kan-btn-success" ng-click="cadastrarHospital()">Cadastrar Hospital</button>
+            <button type="button" class="btn kan-btn-success" ng-click="cadastrarHospital()">Salvar Hospital</button>
         </div>
     </div>
 </div>
