--- a/src/templates/cadastros-gerais/cadastroHospital.html
+++ b/src/templates/cadastros-gerais/cadastroHospital.html
@@ -16,12 +16,12 @@
                 </label>
                 <input class="form-control form-control-sm" type="number" placeholder="Informe o telefone com ddd" ng-model="hospital.telefone">
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-3 col-xl-3 kan-group">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
                 <label>Cep
                 </label>
                 <input class="form-control form-control-sm" type="number" ng-maxlength="8" placeholder="Informe o cep" ng-model="enderecoSeparado.cep">
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-3 col-xl-3 kan-group">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
                 <label>Tipo de Logradouro
                 </label>
                 <select class="form-control form-control-sm" placeholder="Tipo de Logradouro" ng-model="enderecoSeparado.tipoLogradouro">
@@ -63,14 +63,14 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group">
                 <label>Número
                 </label>
-                <input class="form-control form-control-sm" type="number" placeholder="Informe o nº" ng-model="enderecoSeparado.numero">
+                <input class="form-control form-control-sm" type="number" ng-model="enderecoSeparado.numero">
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 kan-group">
                 <label>Bairro
                 </label>
                 <input class="form-control form-control-sm" type="text" placeholder="Informe o bairro" ng-model="enderecoSeparado.bairro">
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
                 <label>Estado
                 </label>
                 <select class="form-control form-control-sm" ng-model="enderecoSeparado.estado">
@@ -104,7 +104,7 @@
                     <option value="TO">TO</option>
                 </select>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 kan-group">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
                 <label>Cidade
                 </label>
                 <input class="form-control form-control-sm" type="text" placeholder="Informe a cidade" ng-model="enderecoSeparado.cidade">
