--- a/src/templates/internacao/registroInternacao.html
+++ b/src/templates/internacao/registroInternacao.html
@@ -74,7 +74,7 @@
                 <input disabled class="form-control form-control-sm" type="text" ng-model="registroInternacao.pedidoInternacao.paciente.nomeMae">
             </div>
 
-            <div ng-hide="true" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
                 <label>Data de nascimento:
                     <b class="text-danger">*</b>
                 </label>
